vector/bundler/ruby/2.5.0/extensions/x86_64-linux/2.5.0/eventmachine-0.12.10/gem_make.out
current directory: /home/yuuki/develop/game_server/games/omega/vector/bundler/ruby/2.5.0/gems/eventmachine-0.12.10/ext
/usr/bin/ruby2.5 -r ./siteconf20190107-12966-5rk2cs.rb extconf.rb
checking for rb_trap_immediate in ruby.h,rubysig.h... no
checking for rb_thread_blocking_region()... no
checking for inotify_init() in sys/inotify.h... yes
checking for writev() in sys/uio.h... yes
checking for rb_thread_check_ints()... yes
checking for rb_time_new()... yes
checking for sys/event.h... no
checking for epoll_create() in sys/epoll.h... yes
creating Makefile

current directory: /home/yuuki/develop/game_server/games/omega/vector/bundler/ruby/2.5.0/gems/eventmachine-0.12.10/ext
make "DESTDIR=" clean

current directory: /home/yuuki/develop/game_server/games/omega/vector/bundler/ruby/2.5.0/gems/eventmachine-0.12.10/ext
make "DESTDIR="
compiling binder.cpp
compiling cmain.cpp
compiling cplusplus.cpp
compiling ed.cpp
compiling em.cpp
In file included from project.h:138:0,
                 from em.cpp:24:
em.cpp: In member function ‘bool EventMachine_t::_RunEpollOnce()’:
em.h:35:20: error: ‘rb_thread_select’ was not declared in this scope
   #define EmSelect rb_thread_select
                    ^
em.cpp:501:3: note: in expansion of macro ‘EmSelect’
   EmSelect (0, NULL, NULL, NULL, &tv);
   ^~~~~~~~
em.h:35:20: note: suggested alternative: ‘rb_thread_fd_select’
   #define EmSelect rb_thread_select
                    ^
em.cpp:501:3: note: in expansion of macro ‘EmSelect’
   EmSelect (0, NULL, NULL, NULL, &tv);
   ^~~~~~~~
em.cpp: In member function ‘int SelectData_t::_Select()’:
em.h:35:20: error: ‘rb_thread_select’ was not declared in this scope
   #define EmSelect rb_thread_select
                    ^
em.cpp:742:9: note: in expansion of macro ‘EmSelect’
  return EmSelect (maxsocket+1, &fdreads, &fdwrites, &fderrors, &tv);
         ^~~~~~~~
em.h:35:20: note: suggested alternative: ‘rb_thread_fd_select’
   #define EmSelect rb_thread_select
                    ^
em.cpp:742:9: note: in expansion of macro ‘EmSelect’
  return EmSelect (maxsocket+1, &fdreads, &fdwrites, &fderrors, &tv);
         ^~~~~~~~
em.cpp: In member function ‘bool EventMachine_t::_RunSelectOnce()’:
em.h:35:20: error: ‘rb_thread_select’ was not declared in this scope
   #define EmSelect rb_thread_select
                    ^
em.cpp:873:4: note: in expansion of macro ‘EmSelect’
    EmSelect (0, NULL, NULL, NULL, &tv);
    ^~~~~~~~
em.h:35:20: note: suggested alternative: ‘rb_thread_fd_select’
   #define EmSelect rb_thread_select
                    ^
em.cpp:873:4: note: in expansion of macro ‘EmSelect’
    EmSelect (0, NULL, NULL, NULL, &tv);
    ^~~~~~~~
em.cpp: In member function ‘void EventMachine_t::_ReadLoopBreaker()’:
em.cpp:924:52: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   (*EventCallback)(NULL, EM_LOOPBREAK_SIGNAL, "", 0);
                                                    ^
em.cpp: In member function ‘bool EventMachine_t::_RunTimers()’:
em.cpp:948:72: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
    (*EventCallback) (NULL, EM_TIMER_FIRED, NULL, i->second.GetBinding());
                                                                        ^
em.cpp: In member function ‘const long unsigned int EventMachine_t::ConnectToServer(const char*, int, const char*, int)’:
em.cpp:1089:22: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
  unsigned long out = NULL;
                      ^~~~
em.cpp: In member function ‘const long unsigned int EventMachine_t::ConnectToUnixServer(const char*)’:
em.cpp:1218:22: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
  unsigned long out = NULL;
                      ^~~~
em.cpp:1221:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp:1237:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp:1243:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp:1249:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp: In member function ‘const long unsigned int EventMachine_t::CreateTcpServer(const char*, int)’:
em.cpp:1453:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp:1455:33: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
  unsigned long output_binding = NULL;
                                 ^~~~
em.cpp:1535:9: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
  return NULL;
         ^~~~
em.cpp: In member function ‘const long unsigned int EventMachine_t::OpenDatagramSocket(const char*, int)’:
em.cpp:1545:33: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
  unsigned long output_binding = NULL;
                                 ^~~~
em.cpp:1596:9: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
  return NULL;
         ^~~~
em.cpp: In member function ‘const long unsigned int EventMachine_t::_OpenFileForWriting(const char*)’:
em.cpp:1773:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp: In member function ‘const long unsigned int EventMachine_t::CreateUnixDomainServer(const char*)’:
em.cpp:1805:33: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
  unsigned long output_binding = NULL;
                                 ^~~~
em.cpp:1866:9: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
  return NULL;
         ^~~~
em.cpp: In member function ‘const long unsigned int EventMachine_t::Socketpair(char* const*)’:
em.cpp:1927:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp:1932:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp:1934:33: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
  unsigned long output_binding = NULL;
                                 ^~~~
em.cpp:1938:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp:1948:10: warning: converting to non-pointer type ‘long unsigned int’ from NULL [-Wconversion-null]
   return NULL;
          ^~~~
em.cpp: In member function ‘void EventMachine_t::SignalLoopBreaker()’:
em.cpp:294:8: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  write (LoopBreakerWriter, "", 1);
  ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
em.cpp: In member function ‘void EventMachine_t::_ReadLoopBreaker()’:
em.cpp:922:7: warning: ignoring return value of ‘ssize_t read(int, void*, size_t)’, declared with attribute warn_unused_result [-Wunused-result]
  read (LoopBreakerReader, buffer, sizeof(buffer));
  ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Makefile:234: recipe for target 'em.o' failed
make: *** [em.o] Error 1

make failed, exit code 2
